# nekopad

./: CMakeLists.txt  Main.qml  README.md  favmgr.cpp  favmgr.h  loginmgr.cpp  loginmgr.h  main.cpp  nammgr.cpp  nammgr.h  nekopad.iss.in  nplayer.cpp  nplayer.h  requesttag.h  resources.qrc  usermgr.cpp  usermgr.h  videoinfo.cpp  videoinfo.h  videolistmodel.cpp  videolistmodel.h
.github/workflows/: qt.yml
cmake/: FindLibVLC.cmake
components/: Fav.qml  FavList.qml  Head.qml  Logo.qml  NProgressBar.qml  NToolTip.qml  PlayControls.qml  PlaySetting.qml  User.qml  VItem.qml  VList.qml
models/: favitemmodel.cpp  favitemmodel.h  playurlinfo.cpp  playurlinfo.h
src/: biliwbi.cpp  biliwbi.h  loginmgr.cpp  loginmgr.h  main.cpp  nammgr.cpp  nammgr.h  nplayer.cpp  requesttag.cpp  videolistmodel.cpp
